# lab_os

lab1/: child.c
lab1/doc/: 209_Филь_Лаб1.docx  README.md
lab1/src/: parent.c
lab2/doc/: 209_Филь_Лаб2.docx  README.md
lab2/src/: lab2.cpp  strace_lab2.txt
lab3/doc/: 209_Филь_Лаб3.docx  strace_output.txt
lab3/src/: README.md  lab3.c  start.txt
lab4/doc/: 209_Филь_Лаб4.docx  README.md
lab4/src/: Makefile  calc.h  impl1.c  impl2.c  prog_dynamic  prog_dynamic.c  prog_static  prog_static.c
lab5/doc/: 209_Филь_Лаб5.docx
КР/doc/: 209_Филь_КР.docx  README.md  strace_client.txt  strace_server.txt
КР/src/: CMakeLists.txt  client.cpp  server.cpp
